# zenbook-duo-linux-fedora-43

./: Cargo.toml  README.md
.github/workflows/: ci-release.yml
src/: config.rs  install.rs  main.rs  monitor_handling.rs  udev_utils.rs  usb.rs
src/usb/: backlight.rs
