[package]
name = "zenbook-duo-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "5.0"
evdev = "0.12.1"
futures = "*"
rusb = "0.9"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
udev = "0.7.0"
